# IsomFolio

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IsomFolio.sln  README.md
IsomFolio/: IsomFolio.fsproj
IsomFolio.App/: IsomFolio.App.fsproj  Program.fs
IsomFolio.App.Tests/: IsomFolio.App.Tests.fsproj
IsomFolio.App.Tests/UI/: MainViewTests.fs
IsomFolio.App/UI/: ContextMenuExt.fs  DetailPanel.fs  GridView.fs  MainView.fs  SearchBar.fs  Sidebar.fs  Theme.fs
IsomFolio.Core/: AppPaths.fs  FileIndex.fs  IsomFolio.Core.fsproj  Models.fs  PathUtils.fs  Platform.fs
IsomFolio.Core.Benchmarks/: IsomFolio.Core.Benchmarks.fsproj  Program.fs
IsomFolio.Core.Tests/: IsomFolio.Core.Tests.fsproj
IsomFolio.Core.Tests/Indexing/: FolderTreeTests.fs  ThumbnailTests.fs
IsomFolio.Core.Tests/Metadata/: LibTests.fs  TagTreeTests.fs
IsomFolio.Core.Tests/Search/: QueryEngineTests.fs
IsomFolio.Core.Tests/Storage/: DbTests.fs
IsomFolio.Core.Tests/Tags/: OperationsTests.fs
IsomFolio.Core.Tests/XmpSidecar.fs/: XmpTests.fs
IsomFolio.Core/Indexing/: FolderTree.fs  Scanner.fs  Thumbnail.fs  Types.fs  Watcher.fs
IsomFolio.Core/Metadata/: Lib.fs  TagTree.fs  Types.fs  Xmp.fs
IsomFolio.Core/Search/: FTS.fs  QueryEngine.fs
IsomFolio.Core/Storage/: Db.fs  Schema.fs
IsomFolio.Core/Tagging/: Tagging.fs
IsomFolio.Core/Tags/: Operations.fs  Types.fs
IsomFolio.Mac/: IsomFolio.Mac.fsproj
IsomFolio.Mac.Tests/: IsomFolio.Mac.Tests.fsproj
IsomFolio.Platform.Mac/: README.md  Tags.fs
IsomFolio.Platform.Mac.Tests/: IsomFolio.Platform.Mac.Tests.fsproj  TagsTests.fs
IsomFolio.Tests/: AssemblyInfo.fs  IsomFolio.Tests.fsproj
IsomFolio.Tests/Indexing/: FolderTreeTests.fs  ThumbnailTests.fs
IsomFolio.Tests/Search/: QueryEngineTests.fs
IsomFolio.Tests/Storage/: DbTests.fs
IsomFolio.Tests/Tagging/: TaggingTests.fs
IsomFolio.Tests/UI/: DetailPanelTests.fs  GridViewBugTests.fs  GridViewTests.fs  MainViewTests.fs  SearchBarTests.fs  SidebarTests.fs  SmartAlbumEditorTests.fs  TagBrowserTests.fs  TagTreeTests.fs
IsomFolio/UI/: ContextMenuExt.fs  DetailPanel.fs  GridView.fs  LoupeView.fs  MainView.fs  SearchBar.fs  Sidebar.fs  SmartAlbumEditor.fs  TagBrowser.fs  TagTree.fs  Theme.fs
addons/: README.md
addons-cs/: IsomFolioAddOns.slnx
addons-cs/Sdk/: AddonCapability.cs  InboundMessage.cs  LogLevel.cs  MessageReader.cs  MessageWriter.cs  OutboundMessage.cs  ResponseTypes.cs  Sdk.csproj  SdkArgs.cs  SdkJsonContext.cs
addons-cs/Sdk.Tests/: MessageReaderTests.cs  MessageWriterTests.cs  Sdk.Tests.csproj
addons-cs/faces/: AddonInfo.cs  AddonProtocol.cs  AppJsonContext.cs  ClusterFacesHandler.cs  ClusterFacesRequestHandler.cs  ClusterFacesService.cs  Clustering.cs  Config.cs  DbscanConfig.cs  EmbeddingCache.cs  FaceDetector.cs  FaceRecognizer.cs  FacesWorker.cs  IRequestHandler.cs  IsfxMessage.cs  JsonContext.cs  Message.cs  MessageInbound.cs  MessageInbox.cs  MessageOutbound.cs  MessageOutbox.cs  MessageSender.cs  MessageSink.cs  ModelDownloader.cs  OutboundMessage.cs  Program.cs  RequestHandler.cs  RequestHandlerFactory.cs  faces.csproj  manifest.json
addons-cs/faces.tests/: ClusteringTests.cs  FacesWorkerTests.cs  InferenceTests.cs  ModelFixture.cs  ProtocolTests.cs  faces.tests.csproj
addons/addon-sdk/: Cargo.toml
addons/autotag-clip/: Cargo.toml  isomfolio-addon.json  manifest.json
addons/autotag-clip/src/: main.rs
addons/autotag-openai/: Cargo.toml  manifest.json
addons/autotag-openai/src/: main.rs
addons/faces/: Cargo.toml  isomfolio-addon.json
addons/faces/src/: cluster.rs  main.rs  model.rs
addons/isomfolio-autotag/: Cargo.toml  isomfolio-addon.json
addons/isomfolio-autotag-clip/: Cargo.toml  isomfolio-addon.json
addons/isomfolio-autotag-openai/: isomfolio-addon.json
addons/isomfolio-autotag/src/: main.rs
addons/isomfolio-test-addon/: Cargo.toml  isomfolio-addon.json
addons/test-addon/: Cargo.toml  manifest.json
dev-docs/: DEVDOCS.md  architecture.md  design-system.md
docs/: astro.config.mjs  package-lock.json
extensions/: README.md
extensions-cs/: .dockerignore  README.md
extensions-cs/Faces/: Clustering.cs  DbscanConfig.cs  Dockerfile  EmbeddingCache.cs  Engine.cs  EngineApi.cs  ExtensionInfo.cs  FaceDetector.cs  FacesLogger.cs  GlobalUsings.cs  ModelVariant.cs  Program.cs  faces.csproj  (+2 more)
extensions-cs/Faces.Tests/: ModelFixture.cs  faces.tests.csproj
extensions/autotag-clip/: Cargo.toml  manifest.json
extensions/autotag-clip/src/: main.rs
isfx-host/: Cargo.toml
isomfolio-app/: Cargo.toml
isomfolio-app/src/: app.rs  main.rs  view.rs
isomfolio-app/src/app/: input_ids.rs  keybinds.rs  loupe.rs  mod.rs  thumb_cache.rs  types.rs  update.rs
isomfolio-app/src/app/update/: albums.rs  catalog.rs  criteria.rs  detail.rs  drag_drop.rs  extensions.rs  groups.rs  loupe_load.rs  mod.rs  navigation.rs  pointer.rs  scan.rs  scenes.rs  settings.rs  shelves.rs  stacking.rs  sync.rs  tag_browser.rs
isomfolio-app/src/inference/: client.rs  mod.rs  process.rs
isomfolio-app/src/view/: compare.rs  content.rs  context_menu.rs  icons.rs  loupe.rs  loupe_image.rs  menu_bar.rs  mod.rs  modals.rs  people.rs  resolve.rs  settings.rs  sidebar.rs  sidebar_filters.rs  sidebar_rows.rs  styles.rs  tag_browser.rs  task_panel.rs  welcome.rs
isomfolio-core/: Cargo.toml
isomfolio-core/src/: app_paths.rs  catalog.rs  clustering.rs  file_index.rs  fileops.rs  folder_tree.rs  lib.rs  models.rs  path_utils.rs  phash.rs  scene_embed.rs  sharpness.rs  volume.rs
isomfolio-core/src/addon/: config.rs  install.rs  manifest.rs  mod.rs  process.rs  protocol.rs
isomfolio-core/src/extension/: config.rs  install.rs  manifest.rs  mod.rs  process.rs
isomfolio-core/src/indexing/: mod.rs  scanner.rs  thumbnail.rs  types.rs  watcher.rs
isomfolio-core/src/metadata/: apple.rs  exif.rs  mod.rs  xmp.rs
isomfolio-core/src/search/: fts.rs  mod.rs  query_engine.rs
isomfolio-core/src/storage/: db.rs  schema.rs
isomfolio-extension-host/: Cargo.toml
scripts/: build-faces-docker.sh  build-faces.sh  package-addon.sh  package-extension.sh  sync-test-fixtures.sh
(+106 files in other folders)
