[package]
name = "isomfolio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
notify = "6"
dashmap = "6"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
xattr = "1"

[dev-dependencies]
tempfile = "3"
