[package]
name = "isomfolio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
isfx-host = { path = "../isfx-host" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
sha2 = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.40.1"
kamadak-exif = "0.6.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
notify = "8.2.0"
thiserror = "2.0.18"
directories = "6.0.0"
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
xattr = "1"

[dev-dependencies]
tempfile = "3"
