[package]
name = "isfx-autotag-openai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autotag-openai"
path = "src/main.rs"

[dependencies]
isfx-sdk = { path = "../isfx-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3.3.0", features = ["json"] }
base64 = "0.22"
