[package]
name = "autotag-clip"
version = "0.1.0"
edition = "2021"

[dependencies]
isomfolio-extension-sdk = { path = "../isomfolio-extension-sdk" }
tract-onnx = "0.22.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3.3.0"
